--- a/research/index.html
+++ b/research/index.html
@@ -5,9 +5,9 @@ title: Research
 	<h1>{{ page.title }}</h1>
 	<h2>Work in Progress</h2>
 		
-	<p> <bold> The Gender Investment Gap over the Life Cycle </bold> <br> 
-        <small> Single women are less likely to hold risky assets than single men and allocate a smaller share of their portfolio into stocks. This paper develops and estimates a portfolio choice model to quantify the determinants of the ''gender investment gap'' over the life-cycle. The framework allows for differences in household structure (single or couple), marital transitions as well as for rich gender heterogeneity along observable characteristics and stochastic processes. The model is able to rationalize the gender gap in equity shares and asset holdings without introducing preference heterogeneity by gender. Counterfactual simulations reveal that both current and expected lower income levels as well as larger household sizes of single women are the main determinants for explaining the gender investment gap. </small> <br> <br> 
-       <small> <b> <span style="text-decoration: underline;">  Presented at:</span> </b> ASSET 2020 Virtual Conference, 2020 European Winter Meeting of the Econometric Society, European Central Bank DG-Research </small>
+	<p> <bold> The Gender Investment Gap over the Life Cycle </bold> </p> 
+        <p style="text-align: justify;"> <small> Single women are less likely to hold risky assets than single men and allocate a smaller share of their portfolio into stocks. This paper develops and estimates a portfolio choice model to quantify the determinants of the ''gender investment gap'' over the life-cycle. The framework allows for differences in household structure (single or couple), marital transitions as well as for rich gender heterogeneity along observable characteristics and stochastic processes. The model is able to rationalize the gender gap in equity shares and asset holdings without introducing preference heterogeneity by gender. Counterfactual simulations reveal that both current and expected lower income levels as well as larger household sizes of single women are the main determinants for explaining the gender investment gap. </small> </p>
+     <p>  <small> <b> <span style="text-decoration: underline;">  Presented at:</span> </b> ASSET 2020 Virtual Conference, 2020 European Winter Meeting of the Econometric Society, European Central Bank DG-Research </small>
 	</p>
 
 	<p> <bold> Joint Search over the Life Cycle </bold> <br>
