--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@ title: Annika Bacher
 <div class="blurb">
 	
 	<h1><img src="img_github.jpg" alt="Smiley face" style="float:right;width:168px;height:214px;">Annika Bacher</h1>
+	
 	<p>Welcome!</p>
 	<p> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are Russell Cooper and Tom Crossley.</p>
 
 	<p> In my <a href="/research">research</a>, I study how family structure shapes financial choices and labor market decisions of households. </p>
 
    <p> You can find a copy of my CV <a href="https://annikabacher.github.io/Bacher_CV.pdf">here</a>. </p>
+
+   <h3> <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a></h3>
 
 	<pre>
 	
