--- a/research/index.html
+++ b/research/index.html
@@ -11,13 +11,13 @@ title: Research
 	</p>
 
 	<p> <bold> Joint Search over the Life Cycle </bold> <br>
-	 <small> with Philipp Gr&uumlbener and Lukas Nord </small> </p>
+	 <small> with <a href="https://philippgruebener.com/">Philipp Gr&uumlbener</a> and <a href="https://lukasnord.eu/">Lukas Nord</a>  </small> </p>
 
 	 <p style="text-align: justify;"> <small>  This paper studies how the added worker effect - intra-household insurance through increased spousal labor market participation - varies over the life-cycle. We show in U.S. data that the added worker effect is much stronger for young than for old households. A stochastic life-cycle model of two-member households with job search in a frictional labor market is capable of replicating this finding. The model suggests that a lower added worker effect for the old is driven primarily by better insurance through asset holdings. A shorter horizon until retirement during which labor force entry of the spouse pays off accounts for most of the remaining gap, with a smaller role for human capital differences between young and old. We discuss implications for labor market flows and the design of public insurance. </small> </p>
 
 
 	<p> <bold> Risk-Taking, Family Resources, and a Full View of the Portfolio </bold>  <br>
-	  <small> with Eirik Brands&aring;s and Joel McMurry  </small> </p>
+	  <small> with <a href="https://www.eebrandsaas.com/">Eirik Eylands Brands&aring;s</a> and <a href="https://joelmcmurry.github.io/">Joel McMurry</a> </small> </p>
 
-	 <p style="text-align: justify;"> <small>  In this project, we empirically analyze how parental wealth affects the risk-taking behavior of their adult children. Parental wealth increases households’ risk tolerance as it provides partial insurance to losses, decreasing the downside to risk. We first show that households' risk-taking in individual assets is increasing in parental wealth. However, risk in one choice may be offset by another or expectations about future labor income. Therefore, we construct a novel measure of risk exposure that jointly accounts for multiple sources of risk. We derive the measure from a standard budget equation in a model of labor and portfolio choices with incomplete markets, with a clear mapping from theory to data. We then show that parental wealth also increases overall risk-taking. </small> </p>
+	 <p style="text-align: justify;"> <small>  In this project, we empirically analyze how parental wealth affects the risk-taking behavior of their adult children. Parental wealth increases households' risk tolerance as it provides partial insurance to losses, decreasing the downside to risk. We first show that households' risk-taking in individual assets is increasing in parental wealth. However, risk in one choice may be offset by another or expectations about future labor income. Therefore, we construct a novel measure of risk exposure that jointly accounts for multiple sources of risk. We derive the measure from a standard budget equation in a model of labor and portfolio choices with incomplete markets, with a clear mapping from theory to data. We then show that parental wealth also increases overall risk-taking. </small> </p>
 
