--- a/contact/index.html
+++ b/contact/index.html
@@ -13,5 +13,5 @@ title: Contact
     50014 Fiesole, FI, Italy </small> </p>
 
     <p> <small> Phone: +49 (0)152 38942185 <br>
-     Email: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a> </small> </p>
-     Web: <a href="annikabacher.github.io">annikabacher.github.io</a> 
+     Email: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a> </small> <br>
+     Web: <a href="annikabacher.github.io">annikabacher.github.io</a> </p>
