--- a/contact/index.html
+++ b/contact/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Contact
+title: Contact Information
 ---
-	<h1>{{ page.title }}</h1>
-	<h2>Contact Information</h2>
+	<h2>{{ page.title }}</h2>
 		
 	<p> Annika Bacher  </p>
 
@@ -13,5 +12,5 @@ title: Contact
     50014 Fiesole, FI, Italy </small> </p>
 
     <p> <small> Phone: +49 (0)152 38942185 <br>
-     Email: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a> </small> <br>
-     Web: <a href="annikabacher.github.io">annikabacher.github.io</a> </p>
+     Email: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a>  <br>
+     Web: <a href="annikabacher.github.io">annikabacher.github.io</a> </small> </p>
