--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Annika Bacher
 ---
 <div class="blurb">
+
+	<h2>{{ page.title }}</h2>
 	
 	<h1><img src="img_github.jpg" alt="Smiley face" style="float:right;width:168px;height:214px;">Annika Bacher</h1>
 	
