--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@ title: Contact Information
 ---
 	<h1>{{ page.title }}</h1>
 		
-	<p> Annika Bacher  </p>
+	<p> <large> Annika Bacher </large> </p>
 
 	<p> <small> European University Institute <br>
 	Villa La Fone <br>
