--- a/research/index.html
+++ b/research/index.html
@@ -5,18 +5,18 @@ title: Research
 	<h1>{{ page.title }}</h1>
 	<h2>Work in Progress</h2>
 		
-	<p> <bold> The Gender Investment Gap over the Life Cycle </bold> </p> 
+	<h3> The Gender Investment Gap over the Life Cycle </h3> 
         <p style="text-align: justify;"> <small> Single women are less likely to hold risky assets than single men and allocate a smaller share of their portfolio into stocks. This paper develops and estimates a portfolio choice model to quantify the determinants of the ''gender investment gap'' over the life-cycle. The framework allows for differences in household structure (single or couple), marital transitions as well as for rich gender heterogeneity along observable characteristics and stochastic processes. The model is able to rationalize the gender gap in equity shares and asset holdings without introducing preference heterogeneity by gender. Counterfactual simulations reveal that both current and expected lower income levels as well as larger household sizes of single women are the main determinants for explaining the gender investment gap. </small> </p>
      <p>  <small> <b> <span style="text-decoration: underline;">  Presented at:</span> </b> ASSET 2020 Virtual Conference, 2020 European Winter Meeting of the Econometric Society, European Central Bank DG-Research </small>
 	</p>
 
-	<p> <bold> Joint Search over the Life Cycle </bold> <br>
+	<h3> Joint Search over the Life Cycle </h3> 
 	 <small> with <a href="https://philippgruebener.com/">Philipp Gr&uumlbener</a> and <a href="https://lukasnord.eu/">Lukas Nord</a>  </small> </p>
 
 	 <p style="text-align: justify;"> <small>  This paper studies how the added worker effect - intra-household insurance through increased spousal labor market participation - varies over the life-cycle. We show in U.S. data that the added worker effect is much stronger for young than for old households. A stochastic life-cycle model of two-member households with job search in a frictional labor market is capable of replicating this finding. The model suggests that a lower added worker effect for the old is driven primarily by better insurance through asset holdings. A shorter horizon until retirement during which labor force entry of the spouse pays off accounts for most of the remaining gap, with a smaller role for human capital differences between young and old. We discuss implications for labor market flows and the design of public insurance. </small> </p>
 
 
-	<p> <bold> Risk-Taking, Family Resources, and a Full View of the Portfolio </bold>  <br>
+	<h3> Risk-Taking, Family Resources, and a Full View of the Portfolio </h3> 
 	  <small> with <a href="https://www.eebrandsaas.com/">Eirik Eylands Brands&aring;s</a> and <a href="https://joelmcmurry.github.io/">Joel McMurry</a> </small> </p>
 
 	 <p style="text-align: justify;"> <small>  In this project, we empirically analyze how parental wealth affects the risk-taking behavior of their adult children. Parental wealth increases households' risk tolerance as it provides partial insurance to losses, decreasing the downside to risk. We first show that households' risk-taking in individual assets is increasing in parental wealth. However, risk in one choice may be offset by another or expectations about future labor income. Therefore, we construct a novel measure of risk exposure that jointly accounts for multiple sources of risk. We derive the measure from a standard budget equation in a model of labor and portfolio choices with incomplete markets, with a clear mapping from theory to data. We then show that parental wealth also increases overall risk-taking. </small> </p>
