--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Annika Bacher
 
 	<p> In my <a href="/research">research</a>, I study how family structure shapes financial choices and labor market decisions of households. To do so, I mainly rely on structural life-cycle models calibrated to micro data. </p>
 
-   <p> You can find a copy of my CV <a href="https://annikabacher.github.io/Bacher_CV.pdf">here</a>. </p>
+   <p> You can my CV <a href="https://annikabacher.github.io/Bacher_CV.pdf">here</a>. </p>
 
    <h3> Contact: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a></h3>
 
