--- a/contact/index.html
+++ b/contact/index.html
@@ -3,8 +3,9 @@ layout: default
 title: Contact Information
 ---
 	<h1>{{ page.title }}</h1>
-		
-	<h3>  Annika Bacher </h3>
+
+	<h3><img src="badiagarden.jpg" alt="Smiley face" style="float:right;width:168px;height:214px;">Annika Bacher</h3>
+
 
 	<p> <small> European University Institute <br>
 	Villa La Fone <br>
