--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Annika Bacher
 ---
 <div class="blurb">
 	
-	<h1><img src="img_github.jpg" alt="Smiley face" style="float:right;width:168px;height:214px;">Annika Bacher</h1>
+	<h2><img src="bacher.jpg" alt="Smiley face" style="float:right;width:168px;height:214px;">Annika Bacher</h2>
 	
 	<p>Welcome!</p>
 	<p> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are <a href="https://sites.google.com/site/coopereconomics/">Russell Cooper</a> and <a href="https://sites.google.com/site/tfcrossley/">Thomas Crossley</a>.</p>
