--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
----
-layout: default
-title: Annika Bacher
----
+
+<html>
+
+<head>
+
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Annika Bacher</title>
+
+     <link rel="css" href="css/main.css">
+     <link rel="_layouts" href="_layouts/default.html">
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-65546321-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-65546321-1');
+    </script>    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+     <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      
+      ga('create', 'UA-65546321-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+  </head>
+
+   <body>   
+
 <div class="blurb">
-	
-	<h2><img src="bacher.jpg" alt="Smiley face" style="float:right;width:168px;height:214px;">Annika Bacher</h2>
-	
+
+	<h2><img src="badiagarden.jpg" alt="Smiley face" style="float:right;width:270px;height:270px;">Annika Bacher</h2>
+
+
 	<p>Welcome!</p>
 	<p> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are <a href="https://sites.google.com/site/coopereconomics/">Russell Cooper</a> and <a href="https://sites.google.com/site/tfcrossley/">Thomas Crossley</a>.</p>
 
@@ -15,9 +47,7 @@ title: Annika Bacher
 
    <h3> Contact: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a></h3>
 
-	<pre>
-	
-	
-	
-	</pre>
-</div><!-- /.blurb -->
+</div>
+	</body>
+
+</html>
