--- a/index.html
+++ b/index.html
@@ -1,24 +1,11 @@
-
-<html>
-
-<head>
-
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Annika Bacher</title>
-
-     <link rel="css" href="css/main.css">
-     <link rel="_layouts" href="_layouts/default.html">
-
-  </head>
-
-   <body>   
-
+---
+layout: default
+title: Annika Bacher
+---
 <div class="blurb">
-
+	
 	<h2><img src="badiagarden.jpg" alt="Smiley face" style="float:right;width:270px;height:270px;">Annika Bacher</h2>
-
-
+	
 	<p>Welcome!</p>
 	<p> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are <a href="https://sites.google.com/site/coopereconomics/">Russell Cooper</a> and <a href="https://sites.google.com/site/tfcrossley/">Thomas Crossley</a>.</p>
 
@@ -28,7 +15,9 @@
 
    <h3> Contact: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a></h3>
 
-</div>
-	</body>
-
-</html>
+	<pre>
+	
+	
+	
+	</pre>
+</div><!-- /.blurb -->
