--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: Annika Bacher
 	
 	<h2><img src="badiagarden.jpg" alt="Smiley face" style="float:right;width:270px;height:270px;">Annika Bacher</h2>
 	
+	<body>
 	<p>Welcome!</p>
 	<p> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are <a href="https://sites.google.com/site/coopereconomics/">Russell Cooper</a> and <a href="https://sites.google.com/site/tfcrossley/">Thomas Crossley</a>.</p>
 
@@ -14,10 +15,9 @@ title: Annika Bacher
    <p> You can find my CV <a href="https://annikabacher.github.io/Bacher_CV.pdf">here</a>. </p>
 
    <h3> Contact: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a></h3>
+</body>
 
 	<pre>
-	
-	
-	
 	</pre>
+
 </div><!-- /.blurb -->
