--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,8 @@ title: Contact Information
 ---
 	<h1>{{ page.title }}</h1>
 
-	<h3><img src="valdaosta.jpg" alt="Smiley face" style="float:right;width:230px;height:214px;">Annika Bacher</h3>
+
+    <h3>Annika Bacher</h3>
 
 
 	<p> <small> European University Institute <br>
