--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: Annika Bacher
 	
 	<body>
 	<p>Welcome!</p>
-	<p> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are <a href="https://sites.google.com/site/coopereconomics/">Russell Cooper</a> and <a href="https://sites.google.com/site/tfcrossley/">Thomas Crossley</a>.</p>
+	 <p style="text-align: justify;"> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are <a href="https://sites.google.com/site/coopereconomics/">Russell Cooper</a> and <a href="https://sites.google.com/site/tfcrossley/">Thomas Crossley</a>.</p>
 
-	<p> In my <a href="/research">research</a>, I study how family structure shapes financial choices and labor market decisions of households. To do so, I mainly rely on structural life-cycle models calibrated to micro data. </p>
+	 <p style="text-align: justify;"> In my <a href="/research">research</a>, I study how family structure shapes financial choices and labor market decisions of households. To do so, I mainly rely on structural life-cycle models calibrated to micro data. </p>
 
    <p> You can find my CV <a href="https://annikabacher.github.io/Bacher_CV.pdf">here</a>. </p>
 
