--- a/contact/index.html
+++ b/contact/index.html
@@ -15,4 +15,4 @@ title: Contact Information
 
     <p> <small> Phone: +49 (0)152 38942185 <br>
      Email: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a>  <br>
-     Web: <a href="annikabacher.github.io">annikabacher.github.io</a> </small> </p>
+     Web: <a href="https://annikabacher.github.io">annikabacher.github.io</a> </small> </p>
