--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@ title: Contact Information
 
 
 	<p> <small> European University Institute <br>
-	Villa La Fone <br>
+	Villa La Fonte <br>
 	Via delle Fontanelle, 18  <br>
     50014 Fiesole, FI, Italy </small> </p>
 
