--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Annika Bacher
 ---
 <div class="blurb">
 	
-	<h2><img src="badiagarden.jpg" alt="Smiley face" style="float:right;width:270px;height:270px;">Annika Bacher</h2>
+	</h2>Annika Bacher</h2>
 	
 	<body>
 	<p>Welcome!</p>
