--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Annika Bacher
 ---
 <div class="blurb">
 	
-	</h2>Annika Bacher</h2>
+	<h1>{{ page.title }}</h1>
 	
 	<body>
 	<p>Welcome!</p>
