--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Annika Bacher
 ---
 <div class="blurb">
 	
-	<h1>{{ page.title }}</h1>
+	<h1><b>{{ page.title }}</b></h1>
 	
 	<body>
 	<p>Welcome!</p>
