--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
----
-layout: default
-title: Annika Bacher
----
-<div class="blurb">
-	
-	<h1><b>{{ page.title }}</b></h1>
-	
-	<body>
-	<p>Welcome!</p>
-	 <p style="text-align: justify;"> I am a PhD Candidate in Economics at the European University Institute in Florence, Italy. My advisors are <a href="https://sites.google.com/site/coopereconomics/">Russell Cooper</a> and <a href="https://sites.google.com/site/tfcrossley/">Thomas Crossley</a>.</p>
+<!DOCTYPE html>
+<html>
+<head>  
+    <title>Annika BAcher</title>  
+    <meta http-equiv="refresh"
+        content="0; url = 'https://sites.google.com/view/annikabacher'" />  
+</head>  
 
-	 <p style="text-align: justify;"> In my <a href="/research">research</a>, I study how family structure shapes financial choices and labor market decisions of households. To do so, I mainly rely on structural life-cycle models calibrated to micro data. </p>
-
-   <p> You can find my CV <a href="https://annikabacher.github.io/Bacher_CV.pdf">here</a>. </p>
-
-   <h3> Contact: <a href="mailto:annika.bacher@eui.eu">annika.bacher@eui.eu</a></h3>
+<body>
+<h1>Annika Bacher</h1>
+<p>Redirecting to my personal website, which can be found <a href="https://sites.google.com/view/annikabacher">here</a></p>
 </body>
-
-	<pre>
-	</pre>
-
-</div><!-- /.blurb -->
+</html>
